# arkpz-pzpi-22-10-molka-anton

./: .gitmodules  LICENSE  README.md
Pract1/: arkpz-pzpi-22-10-molka-anton-pract1.txt
Pract1/arkpz-pzpi-22-10-molka-anton-pract1/: CMakeLists.txt  Jsonable.h  bookhandler.h  logger.cpp  logger.h  responsefactory.cpp
Pract1/code/: .gitignore  README.md  book.cpp  bookhandler.cpp  bookrepository.cpp  bookrepository.h  dbcontroller.h  genre.h  main.cpp  routefactory.cpp  routefactory.h  servercontroller.h  user.cpp  user.h  userhandler.cpp
Pract2/: arkpz-pzpi-22-10-molka-anton-pract2.txt
Pract2/arkpz-pzpi-22-10-molka-anton-pract2/: apibuilder.sh  book.h  bookrepository.h  carthandler.cpp  carthandler.h  genre.cpp  genrerepository.cpp  genrerepository.h  main.cpp  responsefactory.h  routefactory.h  user.cpp  user.h
Pract2/code/: CMakeLists.txt  Dockerfile  bookhandler.cpp  cartrepository.cpp  cartrepository.h  config.ini  dbcontroller.cpp  has_method.h  logger.cpp  routefactory.cpp  servercontroller.cpp  userhandler.cpp  userhandler.h
Task1/: arkpz-pzpi-22-10-molka-anton-task-1.txt
Task2/: arkpz-pzpi-22-10-molka-anton-task2
Task3/: arkpz-pzpi-22-10-molka-anton-task3.txt
Task4/: arkpz-pzpi-22-10-molka-anton-task4.txt
Task5/: arkpz-pzpi-22-10-molka-anton-task5.txt
